# hardware-snake-st7789

./: .rustfmt.toml  Cargo.toml  flash_release.sh  openocd.cfg  openocd.gdb  reset.cfg
src/: game.rs  main.rs
