[package]
authors = ["kcollister"]
edition = "2018"
name = "snake"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
stm32f3xx-hal = { version = "0.9.1", features = ["ld", "rt", "stm32f303xc"] }
embedded-hal = "0.2.7"
embedded-graphics = "0.7.1"
st7789 = "0.7.0"
display-interface-spi = "0.4.0"
heapless = "0.7.16"
hash32 = "0.2.1"

[[bin]]
name = "snake"
path = "src/main.rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
